Changelog
=========

3.0b4 - Unreleased
------------------


3.0b3 - 2009-09-26
------------------

- Update the requirement to Plone 3.3 instead of individual packages. We don't
  test this version against former Plone versions anymore. Removed no longer
  required code for pre-Plone 3.1.
  [hannosch]

- If no item was selected in the link translations form, a random item was
  selected in the form handler. Thanks to Ichim Tiberiu for the patch. This
  closes http://plone.org/products/linguaplone/issues/204.
  [hannosch]

- Restored the proper functionality of the change language function on the
  manage_translations_form. This closes
  http://plone.org/products/linguaplone/issues/215.
  [hannosch]

- Added a simple configuration option to hide the right column on the
  translation edit form and enable it by default.
  [hannosch]

- Removed the canonical and translations cache. It was never completely save
  to use. This closes http://plone.org/products/linguaplone/issues/82.
  [hannosch]

- Added a new synchronized language vocabulary and use it for the content and
  metadata language availability. This restricts the languages in the common
  language widgets to the set of the supported languages of the site.
  [hannosch]

- Removed the unmaintained support for using the Kupu reference browser in the
  manage_translations_form.
  [hannosch]

- Fixed a deprecation warning for the isRightToLeft script, which is used in
  the translationbrower_popup.
  [hannosch]

- Removed the GlobalRequestPatch - it is no longer required.
  [hannosch]

- Removed the `not_available_lang` template. It wasn't used anymore.
  [hannosch]

- Use request negotiation by default.
  [hannosch]

- Turn on the content language negotiator by default.
  [hannosch]

- Avoid a space after the language name in the selector.
  [hannosch]

- Modernized the code of the language index export import handler.
  [hannosch]

- Refactored common functionality of the catalog exportimport handlers. Added