@@ -1,6 +1,2 @@
-"""\
-LinguaPlone examples package
-"""
-
 import LinguaItem
 import LinguaFolder
